--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-        <title>Todo List</title>
+    <script src="js/script.js" type="module" defer></script>
+    <title>Todo List</title>
 </head>
 
 <body>
@@ -16,25 +17,45 @@
             <section id="date">
                 <div></div>
                 <h1 id="title">Suas Tarefas</h1>
-                <span id="today">Hoje 08/11</span>
+                <span id="today">Hoje <span id="today-date">08/11</span></span>
             </section>
             <section id="details">
 
             </section>
         </header>
-        <span id="inbox">Tarefas</span>
+
+        <section id="inbox-button">
+            <span id="inbox">Tarefas</span>
+            <button id="add-task" ><span class="material-symbols-outlined">
+                add
+            </span></button>
+        </section>
+
         <ul id="task-list">
-            <section class="task completed-task">
+            <section class="task">
                 <input type="checkbox" name="" id="">
-                <p contenteditable>Tarefa</p>
+                <p contenteditable spellcheck="false">Tarefa</p>
                 <button>
-                    <span class="material-symbols-outlined">
+                    <span class="material-symbols-outlined delete-task">
+                        delete
+                    </span>
+                </button>
+            </section>
+            <section class="task">
+                <input type="checkbox" name="" id="">
+                <p contenteditable spellcheck="false">Tarefa</p>
+                <button>
+                    <span class="material-symbols-outlined delete-task">
                         delete
                     </span>
                 </button>
             </section>
         </ul>
     </main>
+
+    <button id="add-task-mobile" ><span class="material-symbols-outlined">
+            add
+        </span></button>
 </body>
 
 </html>
