Frontend quase finalizado, comunições http e barra de progresso finalizados

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,6 +18,8 @@
                 <div></div>
                 <h1 id="title">Suas Tarefas</h1>
                 <span id="today">Hoje <span id="today-date">08/11</span></span>
+                <span id="progress-bar"></span>
+                <span id="progress-bar-background"></span>
             </section>
             <section id="details">
 
@@ -32,21 +34,9 @@
         </section>
 
         <ul id="task-list">
-            <section class="task">
-                <input type="checkbox" name="" id="">
-                <p contenteditable spellcheck="false">Tarefa</p>
-                <button>
-                    <span class="material-symbols-outlined delete-task">
-                        delete
-                    </span>
-                </button>
-            </section>
+            
         </ul>
     </main>
-
-    <button id="add-task-mobile" ><span class="material-symbols-outlined">
-            add
-        </span></button>
 </body>
 
 </html>
