Correção de um bug do botão de adicionar novas tarefas

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
 
         <section id="inbox-button">
             <span id="inbox">Tarefas</span>
-            <button id="add-task" ><span class="material-symbols-outlined">
+            <button id="add-task" ><span class="material-symbols-outlined" translate="no">
                 add
             </span></button>
         </section>
