--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="shortcut icon" href="media/todo.svg" type="image/x-icon">
-    <script src="js/script.js" type="module" defer></script>
+    <link rel="shortcut icon" href="media/todo-icon.svg" type="image/x-icon">
+    <script type="module" src="js/indexAuth.js"></script>
+    <script src="js/index.js" type="module" defer></script>
     <title>Todo List</title>
 </head>
 
