Sistema de login finalizado

--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -14,16 +14,17 @@
 <body>
 
     <main>
+        <section id="mobile-background"></section>
         <h2>LOGIN</h2>
         <form id="login">
             <section id="notification">
                 <span></span>
             </section>
-            <input type="text" id="username" placeholder="Username">
-            <input type="password" id="password" placeholder="Password">
+            <input type="text" id="username" placeholder="Nome de usuário">
+            <input type="password" id="password" placeholder="Senha">
             <button>LOGIN</button>
         </form>
-        <p>Não tem conta? <a href="">Crie sua conta</a></p>
+        <p>Não tem conta? <a href="./register.html">Crie sua conta</a></p>
     </main>
 
 </body>
