--- a/frontend/pages/register.html
+++ b/frontend/pages/register.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../media/todo-icon.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../css/auth-background.css">
+    <script type="module" src="../js/register.js" defer></script>
     <title>Register</title>
 </head>
+
 <body>
-    
+    <main>
+        <section id="mobile-background"></section>
+        <h2>REGISTRAR-SE</h2>
+        <form>
+            <section id="notification">
+                <span></span>
+            </section>
+            <input type="text" id="username" placeholder="Nome de usuário">
+            <input type="password" id="password" placeholder="Senha">
+            <input type="password" id="confirm-password" placeholder="Confirme sua senha">
+            <button>REGISTRAR-SE</button>
+        </form>
+    </main>
 </body>
+
 </html>
