--- a/pages/login.html
+++ b/pages/login.html
@@ -23,6 +23,7 @@
             <input type="text" id="username" placeholder="Nome de usuário">
             <input type="password" id="password" placeholder="Senha">
             <button>LOGIN</button>
+            <section class="load"></section>
         </form>
         <p>Não tem conta? <a href="./register.html">Crie sua conta</a></p>
     </main>
