--- a/pages/register.html
+++ b/pages/register.html
@@ -22,6 +22,7 @@
             <input type="password" id="password" placeholder="Senha">
             <input type="password" id="confirm-password" placeholder="Confirme sua senha">
             <button>REGISTRAR-SE</button>
+            <section class="load"></section>
         </form>
     </main>
 </body>
